# simple_renderer_rust

./: Cargo.toml  ecs-ext.rs  imgui.ini
shaders/: cube_map_convolution.frag  cube_map_convolution.vert  depth_pre_pass.frag  depth_pre_pass.vert  hdri2cube.frag  hdri2cube.vert  lighting.frag  lighting.vert  pass_through.frag  pass_through.vert  skybox.frag  skybox.vert  tone_mapping.frag
shaders/ibl/: brdf_integration_map.frag  cube_map_pass_through.vert  diffuse_cube_map_convolution.frag  diffuse_cube_map_convolution.vert  hdri2cube.frag  hdri2cube.vert  prefiltered_environment_map.frag
src/: app.rs  buffer.rs  camera.rs  helper.rs  ibl.rs  input.rs  loader.rs  log.rs  main.rs  material.rs  math.rs  mesh.rs  model.rs  models.rs  pass.rs  pipeline.rs  shader.rs  tech.rs  technique.rs  techniques.rs  tex.rs  texture.rs  ui.rs  uniform.rs  window.rs
src/asset/: material.rs  mesh.rs  model.rs
src/core/: app.rs  camera.rs  ecs.rs  input.rs  mod.rs  pass.rs  pipeline.rs  tech.rs
src/gl/: buffer.rs  mod.rs  shader.rs  uniform.rs
src/helpers/: helper.rs  loader.rs  mod.rs
src/model/: mesh.rs  mod.rs  model.rs
