[package]
name = "simple_renderer_rust"
version = "0.1.0"
authors = ["Ilya Glushchenko <ilya.glushchenko@sperasoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.34.0"
gl_loader = "0.1.2"
tobj = "0.1.11"
gl = "0.14.0"
lazy_static = "1.4.0"
colored = "1.9.0"
